spacing between recommendations

--- a/app/views/training_set_evaluations/show.haml
+++ b/app/views/training_set_evaluations/show.haml
@@ -12,7 +12,7 @@
           = profile_set.name
         - profile_set.survey_responses.each do |response|
           %h4= response.name
-          %ul          
+          %ul.admin-index-list        
             - @recommendations_by_survey_response_id[response.id].sort_by(&:score).reverse.each do |recommendation|
               %li
                 = "#{recommendation.product.title} (#{recommendation.score.round(2)})"
