--- a/app/views/gifts/show.html.haml
+++ b/app/views/gifts/show.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-sm-12
     %h1
-      = @gift.title
+      = @gift.name
       = link_to 'Edit', edit_gift_path(@gift), class: 'btn btn-default btn-xs'
 
     %p
