--- a/app/views/gifts/_form.html.haml
+++ b/app/views/gifts/_form.html.haml
@@ -7,8 +7,8 @@
     = f.input :selling_price
     = f.input :cost
     = f.input :wrapt_sku
-    = f.input :date_available
-    = f.input :date_discontinued
+    = f.input :date_available, html5: true
+    = f.input :date_discontinued, html5: true
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, 'Save'
