refactored managing of gift questions

--- a/app/views/gifts/_form.html.haml
+++ b/app/views/gifts/_form.html.haml
@@ -2,7 +2,7 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :name
+    = f.input :title
     = f.input :description
     = f.input :selling_price
     = f.input :cost
