--- a/app/views/gift_question_impacts/_edit_body_multiple_choice.haml
+++ b/app/views/gift_question_impacts/_edit_body_multiple_choice.haml
@@ -1,8 +1,8 @@
-= simple_form_for(@training_set_product_question, url: training_set_product_question_impact_path(@training_set, @training_set_product_question)) do |f|
+= simple_form_for(@gift_question_impact, url: training_set_gift_question_impact_path(@training_set, @gift_question_impact)) do |f|
   = f.error_notification
 
   .form-inputs
-    = render 'product_question_details'
+    = render 'gift_question_details'
 
     .form-group
       %h3 Overall Question Importance
