--- a/app/views/gift_question_impacts/new.html.haml
+++ b/app/views/gift_question_impacts/new.html.haml
@@ -1,13 +1,13 @@
 .row
   .col-sm-12
-    %h1 New Product-Question
+    %h1 New Gift-Question
 .row
   .col-sm-6
-    = simple_form_for(@training_set_product_question, url: training_set_product_question_impacts_path(@training_set)) do |f|
+    = simple_form_for(@gift_question_impact, url: training_set_gift_question_impacts_path(@training_set)) do |f|
       = f.error_notification
 
       .form-inputs
-        = f.association :product
+        = f.association :gift
         = f.association :survey_question, label: 'Question', label_method: :prompt, collection: @training_set.survey.questions.where.not(type: 'SurveyQuestions::Text')
 
       .form-actions
