--- a/app/views/gifts/index.html.haml
+++ b/app/views/gifts/index.html.haml
@@ -9,7 +9,7 @@
 %table.table
   %thead
     %tr
-      %th Name
+      %th Title
       %th Description
       %th Selling price
       %th Availability
@@ -18,7 +18,7 @@
   %tbody
     - @gifts.each do |gift|
       %tr
-        %td= gift.name
+        %td= gift.title
         %td= gift.description
         %td= gift.selling_price
         %td= gift.availability_string
