--- a/app/views/training_set_questions/index.haml
+++ b/app/views/training_set_questions/index.haml
@@ -1,7 +1,7 @@
-- @product_questions.each do |product_question|
-  %tr{data: {product_question_row_for_product: product_question.product_id}}
+- @gift_question_impacts.each do |gift_question_impact|
+  %tr{data: {gift_question_impact_row_for_gift: gift_question_impact.gift_id}}
     %td
-    %td= product_question.survey_question.prompt
+    %td= gift_question_impact.survey_question.prompt
     %td
-      = link_to 'Edit Impact', edit_training_set_product_question_impact_path(@training_set, product_question), class: 'btn btn-xs btn-primary'
-      = link_to 'Delete', training_set_product_question_impact_path(@training_set, product_question), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
+      = link_to 'Edit Impact', edit_training_set_gift_question_impact_path(@training_set, gift_question_impact), class: 'btn btn-xs btn-primary'
+      = link_to 'Delete', training_set_gift_question_impact_path(@training_set, gift_question_impact), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
