--- a/app/views/gifts/new.html.haml
+++ b/app/views/gifts/new.html.haml
@@ -8,4 +8,5 @@
     %ul.nav.nav-tabs
       %li(role="presentation" class="active")= link_to 'Details', new_gift_path
       %li(role="presentation" class="disabled")= link_to 'Products', '#', disabled: true
+      %li(role="presentation" class="disabled")= link_to 'Images', '#', disabled: true
     = render 'form' 
