--- a/app/assets/stylesheets/modules/admin/_gift_images.scss
+++ b/app/assets/stylesheets/modules/admin/_gift_images.scss
@@ -2,15 +2,15 @@
   margin: 30px 0;
 }
 
+
 .admin__gift-image-col:nth-child(4n+1) {
   clear: both;
 }
 
 .admin__gift-image-cell {
-  min-height: 240px;
+  height: 240px;
   margin: 10px 0;
   text-align: center;
-  line-height: 240px;
 
   img {
     max-width: 100%;
@@ -24,6 +24,8 @@
 .admin__gift-image-cell-inner {
   display: inline-block;
   position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .admin__add-gift-image-cell {
