sortable gift images

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 
 @import "bootstrap-sprockets";
 @import 'bootstrap-custom';
-@import "bootstrap-sliders-custom";
+// @import "bootstrap-sliders-custom";
 @import "helpers/mixins";
 @import "modules/admin/admin";
 
