refactor training interface to gifts

--- a/app/views/evaluation_recommendations/show.haml
+++ b/app/views/evaluation_recommendations/show.haml
@@ -1,4 +1,4 @@
-%h1 Recommendation Breakdown for #{@recommendation.product.title}
+%h1 Recommendation Breakdown for #{@recommendation.gift.title}
 
 %p
   %b Survey Response:
@@ -8,14 +8,14 @@
   %b Overall Score:
   = @recommendation.score.round(2)
 
-- @recommendation.training_set.product_questions.where(product_id: @recommendation.product_id).preload(:survey_question, :product).each do |product_question|
-  - question_response = @recommendation.survey_response.question_responses.preload(:survey_question_option).detect{|question_response| question_response.survey_question_id == product_question.survey_question_id}
-  - intermediate_products = @engine.calculate_question_rank_intermediate_products(product_question.product, product_question.survey_question)
+- @recommendation.training_set.gift_question_impacts.where(gift_id: @recommendation.gift_id).preload(:survey_question, :gift).each do |gift_question_impact|
+  - question_response = @recommendation.survey_response.question_responses.preload(:survey_question_option).detect{|question_response| question_response.survey_question_id == gift_question_impact.survey_question_id}
+  - intermediate_products = @engine.calculate_question_rank_intermediate_products(gift_question_impact.gift, gift_question_impact.survey_question)
 
   .well
     %p
       %b Question:
-      = product_question.survey_question.prompt
+      = gift_question_impact.survey_question.prompt
     %p
       %b Response:
       = displayable_response(question_response)
@@ -23,10 +23,10 @@
       %b Contribution to Overall Score
       = intermediate_products[:final_question_rank].round(2)
     %p
-      = link_to "Show Details", "#", class: 'btn btn-xs btn-primary', data: {question_rank_details_toggle: true, question_id: product_question.survey_question_id}
-      = link_to "Adjust Question Impact", edit_training_set_evaluation_recommendation_product_question_impact_path(@training_set, @recommendation, product_question), class: 'btn btn-xs btn-primary', data: {loads_in_pjax_modal: true}
+      = link_to "Show Details", "#", class: 'btn btn-xs btn-primary', data: {question_rank_details_toggle: true, question_id: gift_question_impact.survey_question_id}
+      = link_to "Adjust Question Impact", edit_training_set_evaluation_recommendation_gift_question_impact_path(@training_set, @recommendation, gift_question_impact), class: 'btn btn-xs btn-primary', data: {loads_in_pjax_modal: true}
 
-    %table.table.question-rank-details-table{style: 'display: none;', data: {question_rank_details: true, question_id: product_question.survey_question_id}}
+    %table.table.question-rank-details-table{style: 'display: none;', data: {question_rank_details: true, question_id: gift_question_impact.survey_question_id}}
       %thead
         %tr
           %th Question Weight
@@ -36,8 +36,8 @@
           %th Apply Question Weight (Final Rank)
       %tbody
         %tr
-          %td= product_question.question_impact.round(2)
-          %td= displayable_response_weight(product_question, question_response)
+          %td= gift_question_impact.question_impact.round(2)
+          %td= displayable_response_weight(gift_question_impact, question_response)
           %td= intermediate_products[:initial_question_rank].round(2)
           %td= intermediate_products[:negative_rank_penalty_applied].round(2)
           %td= intermediate_products[:final_question_rank].round(2)
