--- a/app/views/recommendation_gift_question_impacts/edit.html.haml
+++ b/app/views/recommendation_gift_question_impacts/edit.html.haml
@@ -3,4 +3,4 @@
     %h1 Edit Product Question
 .row
   .col-sm-12
-    = render edit_body_partial @training_set_product_question
+    = render edit_body_partial @gift_question_impact
