--- a/app/views/recommendation_gift_question_impacts/_edit_body_multiple_choice.haml
+++ b/app/views/recommendation_gift_question_impacts/_edit_body_multiple_choice.haml
@@ -1,8 +1,8 @@
-= simple_form_for @training_set_product_question, url: training_set_evaluation_recommendation_product_question_impact_path(@training_set, @recommendation, @training_set_product_question), html: {class: 'form edit_training_set_product_question', data: {submits_to_pjax_modal: true}} do |f|
+= simple_form_for @gift_question_impact, url: training_set_evaluation_recommendation_gift_question_impact_path(@training_set, @recommendation, @gift_question_impact), html: {class: 'form edit_gift_question_impact', data: {submits_to_pjax_modal: true}} do |f|
   = f.error_notification
 
   .form-inputs
-    = render 'product_question_details'
+    = render 'gift_question_details'
 
     .form-group
       %h3 Overall Question Importance
