--- a/app/views/survey_questions/edit_multiple_choice.haml
+++ b/app/views/survey_questions/edit_multiple_choice.haml
@@ -20,6 +20,14 @@
       = option_form.input :text, label: false, as: :string, input_html: {data: {new_option_text: true}}
       = option_form.submit 'Add New Choice', class: 'btn btn-primary', data: {disable_with: 'Adding...'}
 
+    %h3 Additional Options
+    = simple_form_for @survey_question, url: survey_question_path(@survey, @survey_question) do |form|
+      .form-inputs
+        = form.input :include_other_option, as: :boolean, label: "Allow 'Other' with text box"
+        = form.input :multiple_option_responses, as: :boolean, label: 'Allow multiple selections'
+
+      .form-actions
+        = form.submit 'Save Options', class: 'btn btn-primary'
 
   .col-sm-6
     = render 'preview'
