--- a/app/views/profile_sets/show.html.haml
+++ b/app/views/profile_sets/show.html.haml
@@ -5,7 +5,9 @@
       = link_to 'Edit Title', edit_profile_set_path(@profile_set), class: 'btn btn-default btn-xs'
 
     %h3 Quiz Responses
-    %p= link_to 'Add a New Survey Response', new_profile_set_survey_response_path(@profile_set), class: 'btn btn-primary'
+    %p
+      = link_to 'Add a New Survey Response', new_profile_set_survey_response_path(@profile_set), class: 'btn btn-primary'
+      = link_to 'Import Responses', new_profile_set_import_path(@profile_set), class: 'btn btn-primary'
 
     %table.table
       - @profile_set_survey_responses.each do |response|
