[#130526475] Questions now can have a code which is necessary when using the profile set import.

--- a/app/views/survey_questions/edit.haml
+++ b/app/views/survey_questions/edit.haml
@@ -9,6 +9,7 @@
 
       .form-inputs
         = form.input :prompt
+        = form.input :code, hint: '(required for importing)'
         = render form_fields_partial(@survey_question), form: form
 
       .form-actions
