--- a/app/views/survey_questions/ranges/_form.html.haml
+++ b/app/views/survey_questions/ranges/_form.html.haml
@@ -3,6 +3,7 @@
 
   .form-inputs
     = f.input :prompt
+    = f.input :code, hint: '(required for importing)'
     = f.input :min_label, label: "Left Label"
     = f.input :max_label, label: "Right Label"
     = f.input :mid_label, label: "Center Label (optional)"
