working multiple choice form [#130535581]s

--- a/app/views/profile_set_survey_responses/edit.html.haml
+++ b/app/views/profile_set_survey_responses/edit.html.haml
@@ -1,5 +1,5 @@
 .row
   .col-sm-12
-    %h1 Edit Product Question
+    %h1 Edit Survey Response
 
     = render 'form', url: profile_set_survey_response_path(@profile_set, @profile_set_survey_response)
