--- a/app/views/profile_set_survey_responses/_multiple_choice_response_fields.html.haml
+++ b/app/views/profile_set_survey_responses/_multiple_choice_response_fields.html.haml
@@ -3,14 +3,15 @@
   question = question_response.survey_question
 
 .form-group.check_boxes.optional.profile_set_survey_response_question_responses_survey_question_option
-  %input{:name => "profile_set_survey_response[question_responses_attributes][#{question_response_fields.index}][survey_question_option_ids][]", :type => "hidden", :value => ""}
+  - if question.multiple_option_responses?
+    %input{:name => "profile_set_survey_response[question_responses_attributes][#{question_response_fields.index}][survey_question_option_ids][]", :type => "hidden", :value => ""}
   - question.options.each do |option|
     %span{class: (question.multiple_option_responses? ? 'checkbox' : 'radio')}
       %label{:for => "profile_set_survey_response_question_responses_attributes_#{question_response_fields.index}_survey_question_option_id_#{option.id}[]"}
         - if question.multiple_option_responses?
           = check_box_tag "profile_set_survey_response[question_responses_attributes][#{question_response_fields.index}][survey_question_option_ids][]", option.id, (option.id.in? question_response.survey_question_option_ids)
         - else
-          = question_response_fields.radio_button :survey_question_option_ids, option.id
+          = question_response_fields.radio_button :survey_question_option_id, option.id
         = option.text
         - if option.image?
           %br
