multiple product images [#128796661]

--- a/app/assets/stylesheets/modules/admin/_admin.scss
+++ b/app/assets/stylesheets/modules/admin/_admin.scss
@@ -4,7 +4,7 @@
 @import "lists";
 @import "forms";
 @import "typography";
-@import "gift_images";
+@import "image_gallery_manager";
 
 .admin__actions,
 .links__view-back {
