--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -4,6 +4,12 @@
 
 .row
   .col-sm-8
+    %ul.nav.nav-tabs
+      %li(role="presentation" class="active")= link_to 'Details', edit_product_path(@product)
+      %li(role="presentation")= link_to 'Images', product_images_path(@product)
+
+.row
+  .col-sm-8
     = render 'form'
 
     .links__view-back
