--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -19,11 +19,11 @@
 
 
       %tbody
-        - @products.each do |product|
+        - @products.preload(:primary_product_image).each do |product|
           %tr
             %th(style="text-align: center;")
-              - if product.image?
-                = image_tag product.image_url(:small), style: 'max-height: 50px; align: center;'
+              - if product.primary_product_image.present?
+                = image_tag product.primary_product_image.image_url(:small), style: 'max-height: 50px; align: center;'
             %td= product.title
             %td= product.description
             %td= number_to_currency product.price
