--- a/app/views/gift_products/index.haml
+++ b/app/views/gift_products/index.haml
@@ -13,13 +13,31 @@
 
 .row
   .col-sm-8
+    %h3 Products in this Gift
+    - if @gift.gift_products.empty?
+      %i None yet, add some below!
     %table.table
       %tbody
-        - @gift.gift_products.preload(:product).each do |gift_product|
+        - @gift.gift_products.preload(product: :primary_product_image).each do |gift_product|
+          - product = gift_product.product
           %tr
-            %td= gift_product.product.title
-            %td= link_to 'Remove', gift_product_path(@gift, gift_product), method: 'delete', data: {confirm: 'Are you sure?'}, class: 'btn btn-xs btn-danger'
+            %td(style="text-align: center;")
+              - if product.primary_product_image.present?
+                = image_tag product.primary_product_image.image_url(:small), style: 'max-height: 50px; align: center;'
+            %td= product.title
+            %td= link_to 'Remove', gift_product_path(@gift, gift_product, page: params[:page]), method: 'delete', data: {confirm: 'Are you sure?'}, class: 'btn btn-xs btn-danger'
 
-    = simple_form_for @gift_product, url: gift_products_path(@gift), html: {class: 'form form-inline'} do |form|
-      %td= form.association :product, label: false, include_blank: false, collection: @gift.available_products
-      %td= form.submit 'Add Product', class: 'btn btn-primary'
+.row
+  .col-sm-8
+    %h3 Add Products to this Gift
+    %table.table
+      %tbody
+        - @available_products.each do |product|
+          %tr
+            %td(style="text-align: center;")
+              - if product.primary_product_image.present?
+                = image_tag product.primary_product_image.image_url(:small), style: 'max-height: 50px; align: center;'
+            %td= product.title
+            %td= link_to 'Add', gift_products_path(@gift, gift_product: {product_id: product.id}, page: params[:page]), method: 'post', class: 'btn btn-xs btn-primary'
+
+    = paginate @available_products
