--- a/app/assets/stylesheets/modules/admin/_admin.scss
+++ b/app/assets/stylesheets/modules/admin/_admin.scss
@@ -5,6 +5,7 @@
 @import "forms";
 @import "typography";
 @import "image_gallery_manager";
+@import "gift_products";
 
 .admin__actions,
 .links__view-back {
