--- a/app/views/gift_products/index.haml
+++ b/app/views/gift_products/index.haml
@@ -25,7 +25,7 @@
               - if product.primary_product_image.present?
                 = image_tag product.primary_product_image.image_url(:small), style: 'max-height: 50px; align: center;'
             %td= product.title
-            %td= link_to 'Remove', gift_product_path(@gift, gift_product, page: params[:page]), method: 'delete', data: {confirm: 'Are you sure?'}, class: 'btn btn-xs btn-danger'
+            %td= link_to 'Remove', gift_product_path(@gift, gift_product, context_params), method: 'delete', data: {confirm: 'Are you sure?'}, class: 'btn btn-xs btn-danger'
 
 .row
   .col-sm-8
@@ -47,6 +47,6 @@
               - if product.primary_product_image.present?
                 = image_tag product.primary_product_image.image_url(:small), style: 'max-height: 50px; align: center;'
             %td= product.title
-            %td= link_to 'Add', gift_products_path(@gift, gift_product: {product_id: product.id}, page: params[:page]), method: 'post', class: 'btn btn-xs btn-primary'
+            %td= link_to 'Add', gift_products_path(@gift, context_params.merge(gift_product: {product_id: product.id})), method: 'post', class: 'btn btn-xs btn-primary'
 
     = paginate @available_products
