--- a/app/assets/stylesheets/modules/admin/_admin.scss
+++ b/app/assets/stylesheets/modules/admin/_admin.scss
@@ -1,11 +1,12 @@
 @import "navs";
 @import "buttons";
 @import "icons";
-@import "lists";
+@import "lists_tables";
 @import "forms";
 @import "typography";
 @import "image_gallery_manager";
 @import "gift_products";
+// @import "gift_images";
 
 .admin__actions,
 .links__view-back {
@@ -18,4 +19,7 @@
 .form-panel__left {
   margin-top: 24px;
   padding-bottom: 18px;
+}
+footer {
+  margin-top: 36px;
 }
