--- a/app/assets/stylesheets/modules/admin/_lists_tables.scss
+++ b/app/assets/stylesheets/modules/admin/_lists_tables.scss
@@ -14,3 +14,10 @@
 .ui-sortable-handle {
   cursor: pointer;
 }
+.admin-index-table--image-cell {
+  width: 120px;
+  text-align: center;
+}
+.admin-index-table--image {
+  max-height: 100px;
+}
