--- a/app/views/gifts/index.html.haml
+++ b/app/views/gifts/index.html.haml
@@ -19,9 +19,9 @@
   %tbody
     - @gifts.each do |gift|
       %tr
-        %th(style="text-align: center;")
+        %td.admin-index-table--image-cell
           - if gift.primary_gift_image.present?
-            = image_tag gift.primary_gift_image.image_url(:small), style: 'max-height: 50px; align: center;'
+            = image_tag gift.primary_gift_image.image_url(:small), class: 'admin-index-table--image'
         %td= gift.title
         %td= gift.description
         %td= gift.selling_price
